5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1752_3093.log
== TEST (2019-05-16 16:25:10) 
-- CODE:
r=input("Qual o resultado das partidas?: v.upper() e.upper() d.upper()")
print(r)
	
-- OUTPUT:
v
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:26:15) 
-- CODE:
r=input("Qual o resultado das partidas?:" v.upper() e.upper() d.upper)
print(r)
	
-- ERROR:
File "XXXX", line 1
    r=input("Qual o resultado das partidas?:" v.upper() e.upper() d.upper)
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:26:30) 
-- CODE:
r=input("Qual o resultado das partidas?:" v.upper() e.upper() d.upper())
print(r)
	
-- ERROR:
File "XXXX", line 1
    r=input("Qual o resultado das partidas?:" v.upper() e.upper() d.upper())
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:27:07) 
-- CODE:
r=input("Qual o resultado das partidas?: v d e".upper())
print(r)
	
-- OUTPUT:
QUAL O RESULTADO DAS PARTIDAS?: V D Ev
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:28:21) 
-- CODE:
r=input("Qual o resultado das partidas?: v d e ".upper())
while (r == "x"):
	r.upper
	print(r)
	
-- OUTPUT:
QUAL O RESULTADO DAS PARTIDAS?: V D E
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:28:44) 
-- CODE:
r=input("Qual o resultado das partidas?: v d e ".upper())
while (r == "x"):
	r.upper
	print(r)
	
-- OUTPUT:
QUAL O RESULTADO DAS PARTIDAS?: V D E
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:28:55) 
-- CODE:
r=input("Qual o resultado das partidas?: v d e ".upper())
while (r == "x"):
	r.upper
print(r)
	
-- OUTPUT:
QUAL O RESULTADO DAS PARTIDAS?: V D E v
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:29:08) 
-- CODE:
r=input("Qual o resultado das partidas?: v d e ".upper())
while (r == "x"):
	r.upper()
print(r)
	
-- OUTPUT:
QUAL O RESULTADO DAS PARTIDAS?: V D E v
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:29:48) 
-- CODE:
r=input("Qual o resultado das partidas?: v d e ".upper())
r.upper()
while (r == "x"):
	r.upper()
print(r)
	
-- OUTPUT:
QUAL O RESULTADO DAS PARTIDAS?: V D E v
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:39:39) 
-- CODE:
r=input("Qual o resultado das partidas?: v d e ".upper())
acumuladora = 0
contador = 0
while (r == "x"):
	r.upper()
	v = 3
	e = 1
	d = 0
	acumuladora = acumuladora + v + e
	contador = contador + 1
	totaldepontos = acumuladora*v*e
	print(totaldepontos)
	

	
-- OUTPUT:
QUAL O RESULTADO DAS PARTIDAS?: V D E
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:39:59) 
-- CODE:
r=input("Qual o resultado das partidas?: v d e ".upper())
contador = 0
while (r == "x"):
	r.upper()
	v = 3
	e = 1
	d = 0
	acumuladora = acumuladora + v + e
	contador = contador + 1
	totaldepontos = acumuladora*v*e
print(totaldepontos)
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(totaldepontos)
NameError: name 'totaldepontos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:40:11) 
-- CODE:
r=input("Qual o resultado das partidas?: v d e ".upper())
contador = 0
while (r == "x"):
	r.upper()
	v = 3
	e = 1
	d = 0
	acumuladora = acumuladora + v + e
	contador = contador + 1
	totaldepontos = acumuladora*v*e
	print(totaldepontos)
	

	
-- OUTPUT:
QUAL O RESULTADO DAS PARTIDAS?: V D E
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:49:03) 
-- CODE:
r=input("Qual o resultado das partidas?: v d e ".upper())
acumuladora = 0
contador = 0
while (r == "x"):

	

	
-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:49:11) 
-- CODE:
r=input("Qual o resultado das partidas?: v d e ".upper())
acumuladora = 0
contador = 0
while (r == "x"):

	

	
-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:49:20) 
-- CODE:
r=input("Qual o resultado das partidas?: v d e ".upper())
acumuladora = 0
contador = 0
while (r == "x"):
	
-- ERROR:
File "XXXX", line 6
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:49:26) 
-- CODE:
r=input("Qual o resultado das partidas?: v d e ".upper())
acumuladora = 0
contador = 0
	while (r == "x"):
	
-- ERROR:
File "XXXX", line 4
    while (r == "x"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:49:40) 
-- CODE:
r=input("Qual o resultado das partidas?: v d e ".upper())
acumuladora = 0
contador = 0
while (r == "x"):
	
-- ERROR:
File "XXXX", line 6
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:49:44) 
-- CODE:
r=input("Qual o resultado das partidas?: v d e ".upper())
acumuladora = 0
contador = 0

	
-- OUTPUT:
QUAL O RESULTADO DAS PARTIDAS?: V D E
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:50:04) 
-- CODE:
r=input("Qual o resultado das partidas?: v d e ".upper())
acumuladora = 0
contador = 0
while (r == "x"):
	
-- ERROR:
File "XXXX", line 6
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:54:48) 
-- CODE:
r=input("Qual o resultado das partidas?: v.upper() d e ".upper())
contador = 0
while (r == "x"):
	
	
-- ERROR:
File "XXXX", line 6
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:54:52) 
-- CODE:
r=input("Qual o resultado das partidas?: v.upper() d e ".upper())
contador = 0

	
	
-- OUTPUT:
QUAL O RESULTADO DAS PARTIDAS?: V.UPPER() D E
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:55:02) 
-- CODE:
r=input("Qual o resultado das partidas?: v d e ".upper())
contador = 0

	
	
-- OUTPUT:
QUAL O RESULTADO DAS PARTIDAS?: V D E
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
